# PhD-Narrative-Finance

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
.devenv/: requirements.txt  setup.bashrc
content/chapter-1/: README.md
content/chapter-2/: README.md
content/chapter-2/central-banker-speeches/: gigando_speech_NER.ipynb  macroeconomic_narratives_breakpoints.ipynb
content/chapter-3/: README.md
content/chapter-4/: README.md
content/conclusion/: README.md
content/introduction/: README.md
